# mcp-beginner-guide

./: FAQ.md  README.md
src/: cli.py  file_tools.py  mcp_server.py  ollama_client.py
src/workspace/test/: .env.example  README.md  pyproject.toml  requirements.txt
src/workspace/test/src/: utils.py
test_workspace/test_project/: .env.example  README.md  hello.txt  pyproject.toml
test_workspace/test_project/src/: main.py
workspace/api_test_project/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
workspace/api_test_project/src/: main.py
workspace/test/src/: data_loader.py  main.py
workspace/test/tests/: test_utils.py
workspace/test_app/: .env.example  README.md  pyproject.toml  requirements.txt
workspace/test_app/src/: main.py
workspace/test_app/tests/: test_main.py
workspace/test_app1/: .env.example  README.md  pyproject.toml
workspace/test_app1/src/: main.py
